syntax = "proto3";

option csharp_namespace = "GrpcAddress";

service Addresses {
	rpc CreateAddressAsync (CreateAddressRequest) returns (CreateAddressResponse);
	rpc RetrieveAddressAsync(RetrieveAddressRequest) returns (RetrieveAddressResponse);
	rpc RetrieveProvince(RetrieveProvinceReqeust) returns(RetrieveProvinceResponse);
}

message CreateAddressRequest {
	string Province = 1;
	string City=2;
	string County=3;
}

message CreateAddressResponse {
	bool Succeed = 1;
	string message=2;
}

message RetrieveAddressRequest{
	string ID=1;
}

message RetrieveAddressResponse{
	string ID=1;
	string Province = 2;
	string City=3;
	string County=4;
}

message RetrieveProvinceReqeust{

}

message RetrieveProvinceResponse{
	string Code =1;
	string CreateTime=2 ;
	string ID =3;
	string Name =4;
	string UpdateTime = 5;
}

